--- a/pages/natacion.html
+++ b/pages/natacion.html
@@ -22,7 +22,8 @@
                         <h1 class="1360px:text-8xl 940px:text-7xl 320px:text-5xl 940px:mt-0 text-azul_catolica font-bree_bold">TALLER DE NATACIÓN</h1>
                         <h2 class="font-bree_bold 1360px:text-4xl 940px:text-3xl 320px:text-xl">¡Sumérgete en la diversión!</h2>
                         <!-- <p class="font-bree_regular 1360px:text-base 320px:text-sm  text-gray-300">Vive una experiencia alegre y emocionante mientras aprendes a nadar. Las clases están diseñadas para combinar el aprendizaje con la diversión en cada sesión</p> -->
-                        <button class="bg-azul_catolica px-10 py-1 rounded-md 320px:mt-4 font-bree_regular outline outline-1 outline-azul_catolica hover:bg-transparent hover:cursor-pointer transition duration-500 1260px:text-base 940px:text-sm 320px:text-xs 1360px:mt-10">CONTÁCTANOS</button>
+                        <!-- <button class="bg-azul_catolica px-10 py-1 rounded-md 320px:mt-4 font-bree_regular outline outline-1 outline-azul_catolica hover:bg-transparent hover:cursor-pointer transition duration-500 1260px:text-base 940px:text-sm 320px:text-xs 1360px:mt-10">CONTÁCTANOS</button> -->
+                        <a href="https://wa.me/997470362" target="_blank" class="320px:bg-azul_catolica 320px:text-white 320px:font-bree_regular 320px:px-7 py-0.5 320px:rounded-lg hover:bg-blue-500 duration-300">Contáctanos</a>
                     </div>
                 </div>
             </div>
@@ -97,15 +98,15 @@
         </ul>
     </header>
 
-    <main class="1000px:w-940px 1260px:w-1200px 1000px:mx-auto 1000px:flex 320px:mt-4">
+    <main class="1000px:w-940px 1260px:w-1200px 1000px:mx-auto 1000px:flex 1000px:flex-row-reverse 320px:mt-4">
         <section>
             <div class="320px:bg-verde_catolica 320px:text-white 320px:font-bold 320px:p-4 320px:rounded-md 320px:shadow-md animate__animated animate__bounce 320px:w-310px 320px:mx-auto">
                 Las promociones están disponibles hasta el <span class="underline">21 de diciembre</span>.
             </div>              
         </section>
-        <section class="320px:mt-5 320px:flex 320px:flex-col 320px:gap-4">
+        <section class="320px:mt-5 320px:flex 320px:flex-col 320px:gap-4 320px:w-11/12 320px:mx-auto 440px:w-420px 1000px:mt-0">
             <div id="aquabebé">
-                <div class="320px:border 320px:rounded-lg 320px:w-310px 320px:mx-auto">
+                <div class="320px:border 320px:rounded-lg 320px:border-gray-400">
                     <div class="320px:bg-azul_catolica 320px:text-white 320px:font-bree_bold 320px:py-1 320px:flex 320px:flex-col 320px:items-center 320px:leading-none 320px:rounded-t-lg">
                         <span class="320px:text-lg">Aquabebé</span>
                         <span class="320px:text-sm font-bree_regular">(9 meses a 4 años)</span>
@@ -115,7 +116,7 @@
                         <span>Horario</span>
                         <span>Costo</span>
                     </div>
-                    <div class="grid grid-cols-3 grid-rows-custom items-center text-center py-3 font-clanpro_news text-xs">
+                    <div class="grid grid-cols-3 grid-rows-custom items-center text-center py-3 font-bree_regular text-xs">
                         <span>Lu/Mi/Vi</span>
                         <span>12 - 12:45 pm</span>
                         <span class="col-start-3 col-end-4 row-start-1 row-end-5">S/. 350</span>
@@ -126,7 +127,7 @@
                 </div>
             </div>
             <div id="menores_1">
-                <div class="320px:border 320px:rounded-lg 320px:w-310px 320px:mx-auto">
+                <div class="320px:border 320px:rounded-lg 320px:border-gray-400">
                     <div class="320px:bg-azul_catolica 320px:text-white 320px:font-bree_bold 320px:py-1 320px:flex 320px:flex-col 320px:items-center 320px:leading-none 320px:rounded-t-lg">
                         <span class="320px:text-lg">Menores 1</span>
                         <span class="320px:text-sm font-bree_regular">(5 a 7 años)</span>
@@ -136,7 +137,7 @@
                         <span>Horario</span>
                         <span>Costo</span>
                     </div>
-                    <div class="grid grid-cols-3 grid-rows-8 items-center text-center py-3 font-clanpro_news text-xs">
+                    <div class="grid grid-cols-3 grid-rows-8 items-center text-center py-3 font-bree_regular text-xs">
                         <span class="col-start-1 col-end-2 row-start-1 row-end-9">Lu/Mi/Vi<br>Ma/Ju/Sa</span>
                         <span>8 - 8:45 am</span>
                         <span class="col-start-3 col-end-4 row-start-1 row-end-9">S/. 300</span>
@@ -151,7 +152,7 @@
                 </div>
             </div>
             <div id="menores_2">
-                <div class="320px:border 320px:rounded-lg 320px:w-310px 320px:mx-auto">
+                <div class="320px:border 320px:rounded-lg 320px:border-gray-400">
                     <div class="320px:bg-azul_catolica 320px:text-white 320px:font-bree_bold 320px:py-1 320px:flex 320px:flex-col 320px:items-center 320px:leading-none 320px:rounded-t-lg">
                         <span class="320px:text-lg">Menores 2</span>
                         <span class="320px:text-sm font-bree_regular">(8 a 14 años)</span>
@@ -161,7 +162,7 @@
                         <span>Horario</span>
                         <span>Costo</span>
                     </div>
-                    <div class="grid grid-cols-3 grid-rows-8 items-center text-center py-3 font-clanpro_news text-xs">
+                    <div class="grid grid-cols-3 grid-rows-8 items-center text-center py-3 font-bree_regular text-xs">
                         <span class="col-start-1 col-end-2 row-start-1 row-end-9">Lu/Mi/Vi<br>Ma/Ju/Sa</span>
                         <span>8 - 8:50 am</span>
                         <span class="col-start-3 col-end-4 row-start-1 row-end-9">S/. 300</span>
@@ -176,7 +177,7 @@
                 </div>
             </div>
             <div id="jovenes">
-                <div class="320px:border 320px:rounded-lg 320px:w-310px 320px:mx-auto">
+                <div class="320px:border 320px:rounded-lg 320px:border-gray-400">
                     <div class="320px:bg-azul_catolica 320px:text-white 320px:font-bree_bold 320px:py-1 320px:flex 320px:flex-col 320px:items-center 320px:leading-none 320px:rounded-t-lg">
                         <span class="320px:text-lg">Jóvenes y Adultos</span>
                         <span class="320px:text-sm font-bree_regular">(15 años a más)</span>
@@ -186,7 +187,7 @@
                         <span>Horario</span>
                         <span>Costo</span>
                     </div>
-                    <div class="grid grid-cols-3 grid-rows-5 items-center text-center py-3 font-clanpro_news text-xs">
+                    <div class="grid grid-cols-3 grid-rows-5 items-center text-center py-3 font-bree_regular text-xs">
                         <span class="col-start-1 col-end-2 row-start-1 row-end-6">Lu/Mi/Vi<br>Ma/Ju/Sa</span>
                         <span>6 - 6:50 am</span>
                         <span class="col-start-3 col-end-4 row-start-1 row-end-6">S/. 230</span>
@@ -198,7 +199,7 @@
                 </div>
             </div>
             <div id="habilidades">
-                <div class="320px:border 320px:rounded-lg 320px:w-310px 320px:mx-auto">
+                <div class="320px:border 320px:rounded-lg 320px:border-gray-400">
                     <div class="320px:bg-azul_catolica 320px:text-white 320px:font-bree_bold 320px:py-1 320px:flex 320px:flex-col 320px:items-center 320px:leading-none 320px:rounded-t-lg">
                         <span class="320px:text-lg">Niños con Habilidades Blandas</span>
                         <span class="320px:text-sm font-bree_regular">(4 a 7 años)</span>
@@ -208,7 +209,7 @@
                         <span>Horario</span>
                         <span>Costo</span>
                     </div>
-                    <div class="grid grid-cols-3 grid-rows-1 items-center text-center py-3 font-clanpro_news text-xs">
+                    <div class="grid grid-cols-3 grid-rows-1 items-center text-center py-3 font-bree_regular text-xs">
                         <span class="col-start-1 col-end-2 row-start-1 row-end-6">Lu/Mi/Vi</span><!-- <br>Ma/Ju/Sa -->
                         <span>2 - 2:45 pm</span>
                         <span class="col-start-3 col-end-4 row-start-1 row-end-6">S/. 350</span>
@@ -216,7 +217,7 @@
                 </div>
             </div>
             <div id="seleccion">
-                <div class="320px:border 320px:rounded-lg 320px:w-310px 320px:mx-auto">
+                <div class="320px:border 320px:rounded-lg 320px:border-gray-400">
                     <div class="320px:bg-azul_catolica 320px:text-white 320px:font-bree_bold 320px:py-1 320px:flex 320px:flex-col 320px:items-center 320px:leading-none 320px:rounded-t-lg">
                         <span class="320px:text-lg">Selección</span>
                         <span class="320px:text-sm font-bree_regular">Club la Católica</span>
@@ -225,7 +226,7 @@
                         <span>Turno</span>
                         <span>Horario</span>
                     </div>
-                    <div class="grid grid-cols-2 grid-rows-1 items-center text-center py-3 font-clanpro_news text-xs">
+                    <div class="grid grid-cols-2 grid-rows-1 items-center text-center py-3 font-bree_regular text-xs">
                         <span class="col-start-1 col-end-2 row-start-1 row-end-6">Lu - Vi</span>
                         <span>1 - 3 pm</span>
                     </div>
