--- a/index.html
+++ b/index.html
@@ -18,17 +18,17 @@
         <div class="1360px:h-screen 940px:h-723px 320px:h-550px relative">
             <video src="/videos/video_slider.mp4" class="w-full h-full object-cover" autoplay loop muted></video>
             <div class="bg-azul_catolica w-full h-full opacity-50 absolute top-0 left-0"></div>
-            <div class="absolute top-0 left-0 w-full h-full flex justify-center items-center text-center 440px:mt-5 540px:mt-6 1000px:mt-0">
+            <div class="absolute top-0 left-0 w-full h-full flex justify-center items-center text-center 440px:mt-5 540px:mt-6 1360px:mt-14 1400px:px:mt-0">
                 <div id="sliders" class="swiper">
                     <div class="swiper-wrapper">
                         <div class="swiper-slide">
-                            <p class="text-white 320px:font-bree_bold 320px:w-11/12 540px:w-500px 1260px:w-850px 320px:mx-auto 320px:text-3xl 816px:text-5xl 1260px:text-6xl">¡Bienvenido al <br><span class="text-amarillo_catolica 320px:text-4xl 816px:text-6xl 1260px:text-7xl">"Club La Católica"</span><br><br>Donde tu pasión por nadar crece cada día!</p>
+                            <p class="text-white 320px:font-bree_bold 320px:w-11/12 540px:w-500px 1260px:w-850px 320px:mx-auto 320px:text-3xl 816px:text-5xl 1260px:text-6xl">¡Bienvenido al <br><span class="text-amarillo_catolica 320px:text-4xl 816px:text-6xl 1260px:text-7xl">"Club Deportivo La Católica"</span><br><br>Donde tu pasión por nadar crece cada día!</p>
                         </div>
                         <div class="swiper-slide">
-                            <p class="text-white 320px:font-bree_bold 320px:w-11/12 540px:w-500px 1260px:w-850px 320px:mx-auto 320px:text-3xl 816px:text-5xl 1260px:text-6xl 1260px:leading-snug">"¡Nada sin límites! Disfruta de piscinas techadas y temperadas durante todo el año."</p>
+                            <p class="text-white 320px:font-bree_bold 320px:w-11/12 540px:w-500px 1260px:w-850px 320px:mx-auto 320px:text-3xl 816px:text-5xl 1260px:text-6xl 1260px:leading-snug">¡Nada sin límites!<br>Disfruta de piscinas techadas y temperadas durante todo el año.</p>
                         </div>
                         <div class="swiper-slide">
-                            <p class="text-white 320px:font-bree_bold 320px:w-11/12 540px:w-500px 1260px:w-850px 320px:mx-auto 320px:text-3xl 816px:text-5xl 1260px:text-6xl 1260px:leading-snug">"Explora más que natación:<br> Descubre talleres que potencian tu desarrollo integral."</p>
+                            <p class="text-white 320px:font-bree_bold 320px:w-11/12 540px:w-500px 1260px:w-850px 320px:mx-auto 320px:text-3xl 816px:text-5xl 1260px:text-6xl 1260px:leading-snug">¡Explora más que natación!<br> Descubre talleres que potencian tu desarrollo integral.</p>
                         </div>
                     </div>
                 </div>
@@ -108,7 +108,8 @@
         <section id="nosotros" class="320px:my-10 1100px:my-16  1260px:gap-3 1100px:mx-auto">
             <div class="1100px:w-3/5 1100px:mx-auto 320px:mx-5">
                 <h2 class="320px:text-3xl 1100px:text-4xl 320px:font-bree_bold 320px:text-azul_catolica 320px:text-center 320px:mb-3">Nosotros</h2>
-                <p class="320px:text-gris_catolica_letra 320px:font-bree_regular 320px:text-center 320px:text-15px 440px:w-96 540px:w-500px 700:w-600px 1100px:w-full 440px:mx-auto 1600px:text-lg">¡Bienvenido al Club Artístico y Deportivo "La Católica"! Ofrecemos clases de natación, teatro y ballet en un entorno inspirador y lleno de energía. Fomentamos el desarrollo personal y artístico de nuestros estudiantes, creando una comunidad apasionada que celebra el talento y la creatividad. Únete y descubre un lugar donde cada clase es una oportunidad para brillar. ¡Tu viaje comienza aquí!</p>
+                <p class="320px:text-gris_catolica_letra 320px:font-bree_regular 320px:text-center 320px:text-15px 440px:w-96 540px:w-500px 700:w-600px 1100px:w-full 440px:mx-auto 1600px:text-lg">¡Bienvenido al Club Deportivo "La Católica"! Ofrecemos clases de natación, teatro y ballet en un entorno inspirador y lleno de energía. Fomentamos el desarrollo personal y artístico de nuestros estudiantes, creando una comunidad apasionada que celebra el talento y la creatividad. Un lugar donde cada clase es una oportunidad para brillar!</p>
+                <p class="320px:text-gris_catolica_letra 320px:font-bree_regular 320px:text-center 320px:text-lg 1000px:text-2xl 440px:w-96 540px:w-500px 700:w-600px 1100px:w-full 440px:mx-auto 320px:mt-4">¡Potencia tu talento aquí!</p>
             </div>
             <div class="320px:my-5 1100px:my-0 1100px:mt-10 1360px:mt-20 bg-azul_catolica 320px:px-4 540px:px-12 700:px-4 1500px:px-7 320px:py-9">
                 <h3 class="320px:font-bree_bold text-amarillo_catolica 320px:mb-3 1100px:text-3xl 1400px:text-4xl 1100px:text-center 320px:text-center 320px:text-28px 900px:text-3xl">Nuestros Docentes</h3>
@@ -188,7 +189,7 @@
         </section>
 
         <section id="noticias" class="320px:px-4 1400px:w-1400px 1400px:mx-auto">
-            <h2 class="320px:text-verde_catolica 320px:font-bree_bold 320px:text-3xl 1100px:text-4xl 320px:text-center 320px:mb-4">Últimas Noticias</h2>
+            <h2 class="320px:text-verde_catolica 320px:font-bree_bold 320px:text-3xl 1100px:text-4xl 320px:text-center 320px:mb-4">Descubre más</h2>
             <div id="slider_noticias" class="swiper">
                 <div class="swiper-wrapper">
                     <div class="swiper-slide 320px:border 320px:border-gray-400 rounded-lg">
@@ -307,7 +308,7 @@
         </section>
 
         <section id="galeria" class="320px:my-12 900px:w-900px 1000px:w-1000px 900px:mx-auto">
-            <h2 class="320px:text-3xl 320px:font-bree_bold 320px:text-azul_catolica 320px:text-center 320px:mb-4 1100px:text-4xl">Galeria</h2>
+            <h2 class="320px:text-3xl 320px:font-bree_bold 320px:text-azul_catolica 320px:text-center 320px:mb-4 1100px:text-4xl">Galería</h2>
             <div class="320px:flex 320px:flex-wrap 320px:gap-5">
                 <div id="button_gal_nat" class="320px:relative 320px:w-64 700:w-80 700:h-96 320px:h-80 320px:mx-auto 320px:rounded-lg 320px:hover:cursor-pointer">
                     <div id="gal_natacion" class="swiper 320px:w-full 320px:h-full">
@@ -352,7 +353,7 @@
             <div class="320px:flex 320px:flex-wrap 320px:gap-5 320px:mx-auto 1000px:w-96 1260px:w-850px 1260px:flex-nowrap">
                 <div class="320px:w-72 320px:mx-auto 320px:text-center">
                     <span class="320px:font-bree_bold 320px:text-lg">Dirección</span>
-                    <p class="font-bree_regular 1260px:mt-7">Calle W Mz. Q2, 7mo. Etapa, Urb. Sto. Domingo - Carabayllo</p>
+                    <p class="font-bree_regular 1260px:mt-7">Calle San Pedro Clavers (Ex Av. W), Mz Q2, Séptima Etapa Santo Domingo - Carabayllo</p>
                 </div>
                 <div class="320px:w-72 320px:mx-auto 320px:text-center">
                     <span class="320px:font-bree_bold 320px:text-lg">Redes Sociales</span>
