se cambio el slider por un video de los 3 talleres

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <header id="header" class="relative">
         <div class="1360px:h-screen 940px:h-723px 320px:h-550px relative">
             <video src="/videos/video_slider.mp4" class="w-full h-full object-cover" autoplay loop muted></video>
-            <div class="bg-azul_catolica w-full h-full opacity-50 absolute top-0 left-0"></div>
+            <div class="w-full h-full absolute top-0 left-0"></div>
             <div class="absolute top-0 left-0 w-full h-full flex justify-center items-center text-center 440px:mt-5 540px:mt-6 1360px:mt-14 1400px:px:mt-0">
                 <div id="sliders" class="swiper">
                     <div class="swiper-wrapper">
