--- a/pages/natacion.html
+++ b/pages/natacion.html
@@ -105,7 +105,7 @@
             </div>              
         </section>
         <section class="320px:mt-5 320px:flex 320px:flex-col 320px:gap-4 320px:w-11/12 320px:mx-auto 440px:w-420px 1000px:mt-0">
-            <div>
+            <div class="320px:flex 320px:flex-col 320px:gap-4">
                 <div id="aquabebé">
                     <div class="320px:border 320px:rounded-lg 320px:border-gray-400">
                         <div class="320px:bg-azul_catolica 320px:text-white 320px:font-bree_bold 320px:py-1 320px:flex 320px:flex-col 320px:items-center 320px:leading-none 320px:rounded-t-lg">
@@ -178,7 +178,7 @@
                     </div>
                 </div>
             </div>
-            <div>
+            <div class="320px:flex 320px:flex-col 320px:gap-4">
                 <div id="jovenes">
                     <div class="320px:border 320px:rounded-lg 320px:border-gray-400">
                         <div class="320px:bg-azul_catolica 320px:text-white 320px:font-bree_bold 320px:py-1 320px:flex 320px:flex-col 320px:items-center 320px:leading-none 320px:rounded-t-lg">
