cambios realizaos en noticias y galeria

--- a/index.html
+++ b/index.html
@@ -194,10 +194,27 @@
                 <div class="swiper-wrapper">
                     <div class="swiper-slide 320px:border 320px:border-gray-400 rounded-lg">
                         <div class="320px:h-44">
-                            <img class="h-full w-full object-cover rounded-sm" src="images/noticias/noticia1.webp" alt="imagenes De Noticias">
+                            <img class="h-full w-full object-cover rounded-sm" src="https://scontent.flim41-1.fna.fbcdn.net/v/t39.30808-6/468535417_979846504161189_1898002403222593944_n.jpg?_nc_cat=110&ccb=1-7&_nc_sid=127cfc&_nc_ohc=KgkRidmETWAQ7kNvgFl2ALi&_nc_zt=23&_nc_ht=scontent.flim41-1.fna&_nc_gid=ARVtqGhkg5cPb8nIoY3bjvA&oh=00_AYDMOZ5OULtBuu7EaQ8k5uZyKY5uicscf22QlgijxPPekw&oe=67582C6D" alt="imagenes De Noticias">
                         </div>
                         <div class="320px:px-2 320px:py-4">
-                            <p class="320px:font-bree_regular 320px:text-gris_catolica_letra 320px:text-sm ">Semana de la Facultad de Ciencias de la Salud: Una celebración de conocimiento e integración</p>
+                            <p class="320px:font-bree_regular 320px:text-gris_catolica_letra 320px:text-sm ">¿Quieres mejorar tu técnica de natación? En enero, CLC te ofrece un descuento del 10% en paquetes de 12 clases. ¡Aprovecha esta oportunidad!</p>
+                            <div class="320px:flex 320px:justify-between 320px:mt-4">
+                                <div class="320px:flex 320px:items-center 320px:gap-1">
+                                    <img class="320px:w-5" src="icons/calendario.png" alt="icono fecha">
+                                    <p class="320px:font-bree_regular 320px:text-gris_catolica_letra 320px:text-xs">02 Octubre, 2024</p>
+                                </div>
+                                <div>
+                                    <img class="320px:w-5" src="/icons/marcador.png" alt="icono link noticia">
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="swiper-slide 320px:border 320px:border-gray-400 rounded-lg">
+                        <div class="320px:h-44">
+                            <img class="h-full w-full object-cover rounded-sm" src="https://scontent.flim41-1.fna.fbcdn.net/v/t39.30808-6/468636030_979846530827853_3546055456016734609_n.jpg?_nc_cat=100&ccb=1-7&_nc_sid=127cfc&_nc_ohc=5PXzZQZ-I_kQ7kNvgEomKnz&_nc_zt=23&_nc_ht=scontent.flim41-1.fna&_nc_gid=AVXNlDYhHgnHJbMKI9yTb2p&oh=00_AYDyLTEw-1RqDn7XzyFuYj2F7KugDTUXDS7-FFDFtv_UVw&oe=675842D9" alt="imagenes De Noticias">
+                        </div>
+                        <div class="320px:px-2 320px:py-4">
+                            <p class="320px:font-bree_regular 320px:text-gris_catolica_letra 320px:text-sm">¡Este verano, nada con descuento! CLC te ofrece un 15% de descuento en paquetes de 24 clases durante enero y febrero. ¡No te lo pierdas!</p>
                             <div class="320px:flex 320px:justify-between 320px:mt-4">
                                 <div class="320px:flex 320px:items-center 320px:gap-1">
                                     <img class="320px:w-5" src="icons/calendario.png" alt="icono fecha">
@@ -214,7 +231,7 @@
                             <img class="h-full w-full object-cover rounded-sm" src="/images/noticias/noticia2.webp" alt="imagenes De Noticias">
                         </div>
                         <div class="320px:px-2 320px:py-4">
-                            <p class="320px:font-bree_regular 320px:text-gris_catolica_letra 320px:text-sm">Semana de la Facultad de Ciencias de la Salud: Una celebración de conocimiento e integración</p>
+                            <p class="320px:font-bree_regular 320px:text-gris_catolica_letra 320px:text-sm">¡Desarrolla el talento de tus hijos con el teatro! Mejora su memoria, concentración y habilidades sociales. ¡Inscríbelos ya!</p>
                             <div class="320px:flex 320px:justify-between 320px:mt-4">
                                 <div class="320px:flex 320px:items-center 320px:gap-1">
                                     <img class="320px:w-5" src="icons/calendario.png" alt="icono fecha">
@@ -228,10 +245,10 @@
                     </div>
                     <div class="swiper-slide 320px:border 320px:border-gray-400 rounded-lg">
                         <div class="320px:h-44">
-                            <img class="h-full w-full object-cover rounded-sm" src="/images/noticias/noticia3.webp" alt="imagenes De Noticias">
+                            <img class="h-full w-full object-cover rounded-sm" src="https://scontent.flim41-1.fna.fbcdn.net/v/t39.30808-6/469214152_985631843582655_4401823691071737334_n.jpg?_nc_cat=111&ccb=1-7&_nc_sid=127cfc&_nc_ohc=bMpmeTdTNC4Q7kNvgH_KE38&_nc_zt=23&_nc_ht=scontent.flim41-1.fna&_nc_gid=AsfwClBnpHpgNpw-Ip3G_8T&oh=00_AYCronTsAhUgKUufGND35CPDPhbg2mkMha8g98ZJQYaEyA&oe=67583FD8" alt="imagenes De Noticias">
                         </div>
                         <div class="320px:px-2 320px:py-4">
-                            <p class="320px:font-bree_regular 320px:text-gris_catolica_letra 320px:text-sm">Semana de la Facultad de Ciencias de la Salud: Una celebración de conocimiento e integración</p>
+                            <p class="320px:font-bree_regular 320px:text-gris_catolica_letra 320px:text-sm">Juntos formamos una gran comunidad educativa. Católica School, CLC y Católica Kids unidos por la educación.</p>
                             <div class="320px:flex 320px:justify-between 320px:mt-4">
                                 <div class="320px:flex 320px:items-center 320px:gap-1">
                                     <img class="320px:w-5" src="icons/calendario.png" alt="icono fecha">
@@ -245,10 +262,10 @@
                     </div>
                     <div class="swiper-slide 320px:border 320px:border-gray-400 rounded-lg">
                         <div class="320px:h-44">
-                            <img class="h-full w-full object-cover rounded-sm" src="/images/noticias/noticia4.webp" alt="imagenes De Noticias">
+                            <img class="h-full w-full object-cover rounded-sm" src="https://scontent.flim41-1.fna.fbcdn.net/v/t39.30808-6/467692737_975464641266042_6819062073528959233_n.jpg?_nc_cat=101&ccb=1-7&_nc_sid=127cfc&_nc_ohc=StyrBTBfoHwQ7kNvgFxvx-Y&_nc_zt=23&_nc_ht=scontent.flim41-1.fna&_nc_gid=AKCit4v7DlUUp1y92jgnbs4&oh=00_AYBAArNeYvxr-cebYTrymiJxGIkORBs8_AUeOjH_B7P_yg&oe=67582625" alt="imagenes De Noticias">
                         </div>
                         <div class="320px:px-2 320px:py-4">
-                            <p class="320px:font-bree_regular 320px:text-gris_catolica_letra 320px:text-sm">Semana de la Facultad de Ciencias de la Salud: Una celebración de conocimiento e integración</p>
+                            <p class="320px:font-bree_regular 320px:text-gris_catolica_letra 320px:text-sm">¡Forma parte de nuestro equipo de campeones! Inscríbete en la selección de natación de CLC ¡ Ellos te esperan!</p>
                             <div class="320px:flex 320px:justify-between 320px:mt-4">
                                 <div class="320px:flex 320px:items-center 320px:gap-1">
                                     <img class="320px:w-5" src="icons/calendario.png" alt="icono fecha">
@@ -262,27 +279,10 @@
                     </div>
                     <div class="swiper-slide 320px:border 320px:border-gray-400 rounded-lg">
                         <div class="320px:h-44">
-                            <img class="h-full w-full object-cover rounded-sm" src="/images/noticias/not_teatro.webp" alt="imagenes De Noticias">
+                            <img class="h-full w-full object-cover rounded-sm" src="https://scontent.flim41-1.fna.fbcdn.net/v/t39.30808-6/466727070_970584441754062_1788023015792598431_n.jpg?_nc_cat=111&ccb=1-7&_nc_sid=127cfc&_nc_ohc=C-cBz3E9yK0Q7kNvgExF5Gj&_nc_zt=23&_nc_ht=scontent.flim41-1.fna&_nc_gid=AjRWgLWtFpavgYfgVxzCM4M&oh=00_AYCHSp_KLFdHe05Q6QmvKGoAkGmRhG5AXZm5ZTODyhsMqg&oe=67582E1A" alt="imagenes De Noticias">
                         </div>
                         <div class="320px:px-2 320px:py-4">
-                            <p class="320px:font-bree_regular 320px:text-gris_catolica_letra 320px:text-sm">Semana de la Facultad de Ciencias de la Salud: Una celebración de conocimiento e integración</p>
-                            <div class="320px:flex 320px:justify-between 320px:mt-4">
-                                <div class="320px:flex 320px:items-center 320px:gap-1">
-                                    <img class="320px:w-5" src="icons/calendario.png" alt="icono fecha">
-                                    <p class="320px:font-bree_regular 320px:text-gris_catolica_letra 320px:text-xs">02 Octubre, 2024</p>
-                                </div>
-                                <div>
-                                    <img class="320px:w-5" src="/icons/marcador.png" alt="icono link noticia">
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="swiper-slide 320px:border 320px:border-gray-400 rounded-lg">
-                        <div class="320px:h-44">
-                            <img class="h-full w-full object-cover rounded-sm" src="/images/noticias/not_natacion.webp" alt="imagenes De Noticias">
-                        </div>
-                        <div class="320px:px-2 320px:py-4">
-                            <p class="320px:font-bree_regular 320px:text-gris_catolica_letra 320px:text-sm">Semana de la Facultad de Ciencias de la Salud: Una celebración de conocimiento e integración</p>
+                            <p class="320px:font-bree_regular 320px:text-gris_catolica_letra 320px:text-sm">Nuestra selección de natación CLC 2024 demostró una vez más su pasión y compromiso en cada entrenamiento. ¡Gracias a todos por su esfuerzo!</p>
                             <div class="320px:flex 320px:justify-between 320px:mt-4">
                                 <div class="320px:flex 320px:items-center 320px:gap-1">
                                     <img class="320px:w-5" src="icons/calendario.png" alt="icono fecha">
@@ -313,32 +313,32 @@
                 <div id="button_gal_nat" class="320px:relative 320px:w-64 700:w-80 700:h-96 320px:h-80 320px:mx-auto 320px:rounded-lg 320px:hover:cursor-pointer">
                     <div id="gal_natacion" class="swiper 320px:w-full 320px:h-full">
                         <div class="swiper-wrapper">
-                            <img class="swiper-slide 320px:w-full 320px:h-full 320px:object-cover 320px:rounded-ee-3xl 320px:rounded-ss-3xl" src="/images/noticias/not_natacion3.webp" alt="imagenes galeria">
-                            <img class="swiper-slide 320px:w-full 320px:h-full 320px:object-cover 320px:rounded-ee-3xl 320px:rounded-ss-3xl" src="/images/noticias/not_natacion4.webp" alt="imagenes galeria">
-                            <img class="swiper-slide 320px:w-full 320px:h-full 320px:object-cover 320px:rounded-ee-3xl 320px:rounded-ss-3xl" src="/images/noticias/not_natación2.webp" alt="imagenes galeria">
+                            <img class="swiper-slide 320px:w-full 320px:h-full 320px:object-cover 320px:rounded-2xl" src="https://images.pexels.com/photos/29635418/pexels-photo-29635418.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1" alt="imagenes galeria">
+                            <img class="swiper-slide 320px:w-full 320px:h-full 320px:object-cover 320px:rounded-2xl" src="https://images.pexels.com/photos/711187/pexels-photo-711187.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1" alt="imagenes galeria">
+                            <img class="swiper-slide 320px:w-full 320px:h-full 320px:object-cover 320px:rounded-2xl" src="https://images.pexels.com/photos/9900039/pexels-photo-9900039.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1" alt="imagenes galeria">
                         </div>
                     </div>
-                    <button class="320px:bg-azul_catolica hover:320px:bg-blue-500 hover:cursor-pointer duration-300 320px:absolute 320px:w-full 320px:left-0 320px:bottom-0 320px:z-20 320px:text-white 320px:font-bree_regular 320px:py-1 rounded-ee-3xl">Ver Galeria - Natación</button>
+                    <button class="320px:bg-azul_catolica hover:320px:bg-blue-500 hover:cursor-pointer duration-300 320px:absolute 320px:w-full 320px:left-0 320px:bottom-0 320px:z-20 320px:text-white 320px:font-bree_regular 320px:py-1 rounded-b-2xl">Ver Galeria - Natación</button>
                 </div>
                 <div id="button_gal_tea" class="320px:relative 320px:w-64 700:w-80 700:h-96 320px:h-80 320px:mx-auto 320px:rounded-lg 320px:hover:cursor-pointer">
                     <div id="gal_teatro" class="swiper 320px:w-full 320px:h-full">
                         <div class="swiper-wrapper">
-                            <img class="swiper-slide 320px:w-full 320px:h-full 320px:object-cover 320px:rounded-ee-3xl 320px:rounded-ss-3xl" src="/images/noticias/not_teatro.webp" alt="imagenes galeria">
-                            <img class="swiper-slide 320px:w-full 320px:h-full 320px:object-cover 320px:rounded-ee-3xl 320px:rounded-ss-3xl" src="/images/noticias/not_teatro2.webp" alt="imagenes galeria">
-                            <img class="swiper-slide 320px:w-full 320px:h-full 320px:object-cover 320px:rounded-ee-3xl 320px:rounded-ss-3xl" src="/images/teatro/teatro_prueba.webp" alt="imagenes galeria">
+                            <img class="swiper-slide 320px:w-full 320px:h-full 320px:object-cover 320px:rounded-2xl" src="https://images.pexels.com/photos/2285932/pexels-photo-2285932.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1" alt="imagenes galeria">
+                            <img class="swiper-slide 320px:w-full 320px:h-full 320px:object-cover 320px:rounded-2xl" src="https://images.pexels.com/photos/2769657/pexels-photo-2769657.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1" alt="imagenes galeria">
+                            <img class="swiper-slide 320px:w-full 320px:h-full 320px:object-cover 320px:rounded-2xl" src="https://images.pexels.com/photos/5801566/pexels-photo-5801566.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1" alt="imagenes galeria">
                         </div>
                     </div>
-                    <button class="320px:bg-verde_catolica hover:320px:bg-hover_verde_catolica duration-300 320px:absolute 320px:w-full 320px:left-0 320px:bottom-0 320px:z-20 320px:text-white 320px:font-bree_regular 320px:py-1 rounded-ee-3xl">Ver Galeria - Teatro</button>
+                    <button class="320px:bg-verde_catolica hover:320px:bg-hover_verde_catolica duration-300 320px:absolute 320px:w-full 320px:left-0 320px:bottom-0 320px:z-20 320px:text-white 320px:font-bree_regular 320px:py-1 rounded-b-2xl">Ver Galeria - Teatro</button>
                 </div>
                 <div id="button_gal_bal" class="320px:relative 320px:w-64 700:w-80 700:h-96 320px:h-80 320px:mx-auto 320px:rounded-lg 320px:hover:cursor-pointer">
                     <div id="gal_ballet" class="swiper 320px:w-full 320px:h-full">
                         <div class="swiper-wrapper">
-                            <img class="swiper-slide 320px:w-full 320px:h-full 320px:object-cover 320px:rounded-ee-3xl 320px:rounded-ss-3xl" src="/images/sliders/ballet-slider.webp" alt="imagenes galeria">
-                            <img class="swiper-slide 320px:w-full 320px:h-full 320px:object-cover 320px:rounded-ee-3xl 320px:rounded-ss-3xl" src="/images/talleres_costos/tc_ballet.webp" alt="imagenes galeria">
-                            <img class="swiper-slide 320px:w-full 320px:h-full 320px:object-cover 320px:rounded-ee-3xl 320px:rounded-ss-3xl" src="/images/noticias/not_ballet.webp" alt="imagenes galeria">
+                            <img class="swiper-slide 320px:w-full 320px:h-full 320px:object-cover 320px:rounded-2xl" src="https://images.pexels.com/photos/11631660/pexels-photo-11631660.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1" alt="imagenes galeria">
+                            <img class="swiper-slide 320px:w-full 320px:h-full 320px:object-cover 320px:rounded-2xl" src="https://images.pexels.com/photos/6717375/pexels-photo-6717375.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1" alt="imagenes galeria">
+                            <img class="swiper-slide 320px:w-full 320px:h-full 320px:object-cover 320px:rounded-2xl" src="https://images.pexels.com/photos/6715557/pexels-photo-6715557.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1" alt="imagenes galeria">
                         </div>
                     </div>
-                    <button class="320px:bg-amarillo_catolica hover:320px:bg-yellow-200 hover:cursor-pointer duration-300 320px:absolute 320px:w-full 320px:left-0 320px:bottom-0 320px:z-20 320px:font-bree_regular 320px:py-1 rounded-ee-3xl">Ver Galeria - Ballet</button>
+                    <button class="320px:bg-amarillo_catolica hover:320px:bg-yellow-200 hover:cursor-pointer duration-300 320px:absolute 320px:w-full 320px:left-0 320px:bottom-0 320px:z-20 320px:font-bree_regular 320px:py-1 rounded-b-2xl">Ver Galeria - Ballet</button>
                 </div>
             </div>
         </section>
